# solcadre

./: README.md  mkdocs.yml  pyproject.toml
docs/: README.md  index.md  installation.md
docs/api/: calendar.md  solar_events.md  types.md
src/solcadre/: __init__.py  calendar.py  cli.py  core.py  format.py  solar_events.py  types.py
tests/: test_calendar.py  test_solar_events.py  test_types.py
