[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "solcadre"
version = "0.1.3"
description = "Solcadre System"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "David Coates" }]
keywords = ["calendar", "astronomy", "solstice", "equinox", "seasons", "week", "time", "cycle"]

dependencies = [
  "astral>=3.2",
]

[project.urls]
Homepage = "https://github.com/davidcoates/solcadre"
Issues = "https://github.com/davidcoates/solcadre/issues"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.23.0",
  "pymdown-extensions>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solcadre"]
